[gd_scene load_steps=5 format=3 uid="uid://cghp8psda6lil"]

[ext_resource type="Script" path="res://scripts/require_item.gd" id="1_obdev"]
[ext_resource type="Texture2D" uid="uid://dquxuovtdswod" path="res://art/Interactible_Symbol.png" id="2_3g77m"]
[ext_resource type="Script" path="res://scripts/interact_symbol.gd" id="3_aaxls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2pvo"]

[node name="require_item" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_obdev")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="InteractSymbol" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(2, 2)
texture = ExtResource("2_3g77m")
script = ExtResource("3_aaxls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_o2pvo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
